# AiyaSample

./: readme.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_gift.xml  activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
javadoc/aiyagift/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list
javadoc/core/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-tree.html  package-list
javadoc/core/com/aiyaapp/aiya/: Const.html  (+6 more)
shadereffect/: .gitignore  CMakeLists.txt  build.gradle
shadereffect/src/androidTest/java/com/aiyaapp/aiya/shadereffect/: ExampleInstrumentedTest.java
shadereffect/src/main/assets/res/particles/: binggan.particle  colors.particle  cross.particle  snow02.particle  twinkle.particle
shadereffect/src/main/assets/res/shaders/: mask.frag  pass2.frag  video.frag
shadereffect/src/main/cpp/: AE3dInterface.h  AiyaShaderEffect_jni.cpp  ShortVideoInterface.h
shadereffect/src/main/java/com/aiyaapp/aiya/shadereffect/: AiyaCutSceneEffect.java  AiyaShaderEffect.java
shadereffect/src/main/java/com/aiyaapp/aiya/shadereffect/filter/: CoolFilterFactory.java  FourScreen.java  NativeCoolFilter.java  ThreeScreen.java
shadereffect/src/test/java/com/aiyaapp/aiya/shadereffect/: ExampleUnitTest.java
(+11 files in other folders)
